# imzDesk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
app/: eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
app/app/: app.config.ts  app.vue
app/app/assets/css/: main.css
app/app/components/: FileBrowser.vue  LogsPanel.vue  MainNavbar.vue  StatusBar.vue  TheHeader.vue
app/app/components/imzML/: Image.client.vue  Loader.vue  Metadata.vue  Spectrum.client.vue  Viewer.vue
app/app/config/: fileTypes.ts
app/app/layouts/: default.vue
app/app/pages/: [...path].vue  datasets.vue  index.vue
app/app/types/: imzML.ts
src/imz5/: __init__.py  reader.py  schema.py
src/imzdesk/: __main__.py  entry.py  server.py
src/imzdesk/api/: schema.py  utils.py
src/imzdesk/api/routes/: __init__.py  filesystem.py  fs.py  imzML.py
src/imzdesk/api/services/: imzML.py  metadata.py
src/imzdesk/io/: __init__.py  base.py  meta.py  msi.py  wsi.py
src/imzdesk/server/: app.py  entry.py  logging.py  settings.py
src/imzdesk/server/routes/: __init__.py  system.py
