[project]
name = "imzdesk"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "h5py>=3.16.0",
    "ipykernel>=7.3.0",
    "lxml>=6.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openslide-bin>=4.0.1.1",
    "openslide-python>=1.4.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyimzml>=1.5.5",
    "pyyaml>=6.0.3",
    "simpleitk>=2.5.5",
    "starlette>=1.3.1",
    "torch~=2.12.1",
    "torchvision~=0.27.1",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.49.0",
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu132" }]
torchvision = [{ index = "pytorch-cu132" }]

[project.optional-dependencies]
extras = [
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
]

[project.scripts]
imzdesk = "imzdesk.server.entry:run_server"

[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
